[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/World/stuff/CommonStuff.gd" type="Script" id=1]
[ext_resource path="res://src/Character/LabelLayout.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Stuff" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 10, -10, -10, -10, -10, 10, 10, 10, 10, -10 )
width = 1.0

[node name="LabelLayout" parent="." instance=ExtResource( 2 )]

[node name="StuffArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StuffArea"]
shape = SubResource( 1 )

[node name="StuffBody" type="StaticBody2D" parent="."]
input_pickable = true
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StuffBody"]
shape = SubResource( 2 )
[connection signal="mouse_entered" from="StuffBody" to="." method="_on_StuffBody_mouse_entered"]
[connection signal="mouse_exited" from="StuffBody" to="." method="_on_StuffBody_mouse_exited"]
